@@ -25,6 +25,8 @@
 (export gnc:option-setter)
 (export gnc:option-default-getter)
 (export gnc:option-generate-restore-form)
+(export gnc:option-scm->kvp)
+(export gnc:option-kvp->scm)
 (export gnc:option-value-validator)
 (export gnc:option-data)
 (export gnc:option-data-fns)
@@ -85,6 +87,8 @@
 (export gnc:options-for-each-general)
 (export gnc:lookup-option)
 (export gnc:generate-restore-forms)
+(export gnc:options-scm->kvp)
+(export gnc:options-kvp->scm)
 (export gnc:options-clear-changes)
 (export gnc:options-touch)
 (export gnc:options-run-callbacks)
